--- a/find_hotel/index.html
+++ b/find_hotel/index.html
@@ -8,8 +8,96 @@
   </head>
   <body>
     <div class="wraper">
-      <header class="header"></header>
-      <main class="main"></main>
+      <header class="header">
+        <div class="header__conteiner">
+          <a href="#" class="heder_-ligo"
+            ><img src="img/Your.logo.svg" alt="Your.logo"
+          /></a>
+          <nav class="header__menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="" class="menu__link">Last Minute Deals</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Blog</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">About us</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="heade__right__icon">
+            <ul class="icon__list">
+              <li class="icons">
+                <a href="#" class="icon_link"
+                  ><img src="img/money.svg" alt="money"
+                /></a>
+              </li>
+              <li class="icons">
+                <a href="#" class="icon_link"
+                  ><img src="img/language.svg" alt="language"
+                /></a>
+              </li>
+              <li class="icons">
+                <a href="#" class="icon_link"></a
+                ><img src="img/icon3.svg" alt="icon" />
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+      <main class="page">
+        <section class="page_main">
+          <div class="main__conteiner">
+            <div class="main__content">
+              <h1 class="main__title">Find an apartment for your vacation</h1>
+              <p class="main_tex">
+                We have several thousand apartments for every taste in every
+                corner of the globe
+              </p>
+              <form action="#">
+                <div class="main__search">
+                  <div class="search__where">
+                    <img src="img/icon_map.svg" alt="" />
+                    <div>
+                      <label style="color: #262729;" for="Wher">Where</label>
+                      <input
+                      id="Where"
+                        type="text"
+                        name="Wher"
+                        placeholder="Search Destination"
+                      />
+                    </div>
+                  </div>
+                  <div class="pereponka"></div>
+                  <div class="search__where when_when">
+                    <img src="img/icon_data.svg" alt="" />
+                    <div class="search_when">
+                      <label style="color: #262729;" for="When">When</label>
+                      <input
+                      id="When"
+                        type="text"
+                        name="When"
+                        placeholder="Select Date"
+                      />
+                    </div>
+                  </div class="search_when">
+                  <button class="main__button">
+                    <img
+                      class="button_search"
+                      src="img/button.svg"
+                      alt="search"
+                    />
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
   </body>
