--- a/find_hotel/index.html
+++ b/find_hotel/index.html
@@ -63,9 +63,9 @@
                   <div class="search__where">
                     <img src="img/icon_map.svg" alt="" />
                     <div>
-                      <label style="color: #262729;" for="Wher">Where</label>
+                      <label style="color: #262729" for="Wher">Where</label>
                       <input
-                      id="Where"
+                        id="Where"
                         type="text"
                         name="Wher"
                         placeholder="Search Destination"
@@ -76,15 +76,15 @@
                   <div class="search__where when_when">
                     <img src="img/icon_data.svg" alt="" />
                     <div class="search_when">
-                      <label style="color: #262729;" for="When">When</label>
+                      <label style="color: #262729" for="When">When</label>
                       <input
-                      id="When"
+                        id="When"
                         type="text"
                         name="When"
                         placeholder="Select Date"
                       />
                     </div>
-                  </div class="search_when">
+                  </div>
                   <button class="main__button">
                     <img
                       class="button_search"
@@ -97,6 +97,119 @@
             </div>
           </div>
         </section>
+        <section class="why_page_main">
+          <div class="why_main__conteiner">
+            <div class="why_main_contend">
+              <h2 class="wyh_main_title">Why Choose Us</h2>
+              <p class="why_main_text">
+                The main reason is because our competitors have disgusting
+                sites, but we can' t write that here, so the text here will be
+                different
+              </p>
+              <div class="wht_page_list">
+                <ul class="why_page_content">
+                  <li class="why_info">
+                    <img src="img/Pay.svg" alt="" />
+                    <h3>Payment methods</h3>
+                    <p>
+                      We have a lot of them, from cryptocurrencies to barter for
+                      potatoes
+                    </p>
+                  </li>
+                  <li class="why_info">
+                    <img src="img/simple.svg" alt="" />
+                    <h3>Simple search process</h3>
+                    <p>
+                      We checked it out, even the kid did it, but it was my
+                      mom's friend's son
+                    </p>
+                  </li>
+                  <li class="why_info"><img src="img/suport.svg" alt="">
+                  <h3>24/7 Support</h3>
+                <p>Is there something you don't understand? Feel free to call us. Phone number in the footer</p></li>
+                  <li class="why_info">
+                    <img src="img/Nice.svg" alt="">
+                    <h3>We are nice</h3>
+                    <p>Fantasy is over, there will be something really convincing here</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="offer_page__conteiner">
+          <div class="offer_page_content">
+            <h2 class="offer_page_title">Special offers</h2>
+            <div class="hotel_offer">
+              <ul class="hotel_list">
+                <li class="hotel">
+                  <img src="img/Rectangle 9.jpeg" alt="">
+                  <h3>Wilderness Club at Big Ceddar</h3>
+                  <p class="dec">2 Bedroom Combined Lodge</p>
+                  <p class="date">28 October — 1 November</p>
+                  <p class="price">$2016 <span>/6 night</span></p>
+                  <ul class="icon_decript">
+                    <li class="icon_list_decript">
+                      <img src="img/bed.svg" alt="">
+                      <p>4 Beds</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/people.svg" alt="">
+                      <p>8 Sleeps</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/line_icon.svg" alt="">
+                      <p>1,350 Sq Ft</p>
+                    </li>
+                  </ul>
+                </li>
+                <li class="hotel">
+                  <img src="img/Rectangle 10.jpeg" alt="">
+                  <h3>Wilderness Club at Big Ceddar</h3>
+                  <p class="dec">2 Bedroom Combined Lodge</p>
+                  <p class="date">28 October — 1 November</p>
+                  <p class="price">$2016 <span>/6 night</span></p>
+                  <ul class="icon_decript">
+                    <li class="icon_list_decript">
+                      <img src="img/bed.svg" alt="">
+                      <p>4 Beds</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/people.svg" alt="">
+                      <p>8 Sleeps</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/line_icon.svg" alt="">
+                      <p>1,350 Sq Ft</p>
+                    </li>
+                  </ul>
+                </li>
+                <li class="hotel">
+                  <img src="img/Rectangle 11.jpeg" alt="">
+                  <h3>Wilderness Club at Big Ceddar</h3>
+                  <p class="dec">2 Bedroom Combined Lodge</p>
+                  <p class="date">28 October — 1 November</p>
+                  <p class="price">$2016 <span>/6 night</span></p>
+                  <ul class="icon_decript">
+                    <li class="icon_list_decript">
+                      <img src="img/bed.svg" alt="">
+                      <p>4 Beds</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/people.svg" alt="">
+                      <p>8 Sleeps</p>
+                    </li>
+                    <li class="icon_list_decript">
+                      <img src="img/line_icon.svg" alt="">
+                      <p>1,350 Sq Ft</p>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
       </main>
       <footer class="footer"></footer>
     </div>
